cloned the gifinfinity to enhance it 🚀

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,137 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer components {
+  .bg-color {
+    @apply bg-[#e8eaee];
   }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: #e8eaee;
+  overflow-x: hidden;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+
+
+
+
+
+
+
+
+
+/* For PlaceHolder Text Color */
+::placeholder {
+  color: #424242 !important;
+  opacity: 1 !important;
+}
+
+:-ms-input-placeholder {
+  color: #424242 !important;
+  opacity: 1;
+}
+
+::-ms-input-placeholder {
+  color: #424242 !important;
+}
+
+
+
+
+
+
+
+
+
+
+
+/* For Scroll Bar Design */
+::-webkit-scrollbar {
+  background-color: #e8eaee;
+  width: 16px
+}
+::-webkit-scrollbar-track {
+  background-color: #e8eaee
+}
+::-webkit-scrollbar-track:hover {
+  background-color: #e8eaee
+}
+::-webkit-scrollbar-thumb {
+  background-color: #babac0;
+  border-radius: 16px;
+  border: 5px solid #e8eaee
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #a0a0a5;
+  border: 4px solid #f4f4f4
+}
+::-webkit-scrollbar-button {
+  display: none
+}
+
+
+
+
+
+
+
+
+
+/* Changing Color Of White Heart to yellow */
+.change-color-to-yellow {
+  filter: invert(94%) sepia(16%) saturate(6129%) hue-rotate(334deg) brightness(106%) contrast(103%);
+}
+
+
+
+
+
+
+
+
+
+
+
+.mouse {
+  height: 45px;
+  width: 26px;
+  border: 3px solid #808080b9;
+  border-radius: 32px;
+  position: relative;
+  .scrollWheel {
+    height: 20px;
+    width: 2px;
+    background: #808080b9;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    top: 10px;
+    border-radius: 1px;
+    transform: scaleY(0);
+    animation: scroll 2s linear infinite;
+  }
+}
+
+@keyframes scroll {
+  0% {
+    transform: scaleY(0);
+    transform-origin: top;
+  }
+  25% {
+    transform: scaleY(1);
+    transform-origin: top;
+  }
+  26% {
+    transform-origin: bottom;
+  }
+  50% {
+    transform: scaleY(0);
+    transform-origin: bottom;
+  }
+  100% {
+    transform: scaleY(0);
+    transform-origin: bottom;
   }
 }
